ex-1 Добавила компонент для отрисовки карточки фильма

--- a/ex-1.html
+++ b/ex-1.html
@@ -13,7 +13,17 @@
 <body>
 <div id="app"></div>
 
-<script type="text/babel"></script>
+<script type="text/babel">
+const Movie = ({name, year, image}) => {
+    return (
+       <div className="movie">
+           <img src={image} alt={"name of movie" + name}/>
+           <h1>{name}</h1>
+           <p>{year}</p>
+       </div>
+    );
+};
+</script>
 
 </body>
 </html>
